Rapid Prd/src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Collection_Accounts__c</fullName>
        <label>Collection Accounts</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>$1k-$5k</fullName>
                </value>
                <value>
                    <fullName>$5k-$10k</fullName>
                </value>
                <value>
                    <fullName>$10k-$25k</fullName>
                </value>
                <value>
                    <fullName>$25k-$50k</fullName>
                </value>
                <value>
                    <fullName>$50k and up</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitor_Advance_Company__c</fullName>
        <description>Who does the merchant have an advance with now or in the past?</description>
        <label>Competitor Advance Company</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Completed_NAMAA_Tag__c</fullName>
        <label>Completed NAMAA Tag:</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ConditionalPricingCriteria__c</fullName>
        <formula>if( and(QC_Business_Category_Alert__c = &quot;No Alert&quot;,  QC_SCF_Alert__c = &quot;No Alert&quot;), &quot;Not Relevant&quot;,(

if(and(QC_SCF_Alert__c =&quot;Yes&quot;, ispickval(BA_X2_years_in_business__c, &quot;No&quot;),Amount&gt;75000),&quot;Advance cannot exceed $75,000.  &quot;,&quot;&quot;)

&amp; if(and(or(QC_SCF_Alert__c =&quot;Yes&quot;,QC_Business_Category_Alert__c = &quot;Yes&quot;),ispickval(BA_X2_years_in_business__c, &quot;No&quot;), Estimated_Days_to_Repay__c&gt;189),&quot;Estimated Term cannot exceed 189 days.&quot;,&quot;&quot;)

&amp; if(and(QC_SCF_Alert__c =&quot;Yes&quot;,QC_Business_Category_Alert__c = &quot;Yes&quot;,ispickval(BA_X2_years_in_business__c, &quot;No&quot;), Percent_Payback__c &gt; 20),&quot;Percent Payback cannot exceed 20%&quot;,
     if(and(QC_Business_Category_Alert__c  = &quot;Yes&quot;,ispickval(BA_X2_years_in_business__c, &quot;No&quot;), Percent_Payback__c &gt; 20),&quot;Percent Payback cannot exceed 20%&quot;,
        if(and(QC_SCF_Alert__c =&quot;Yes&quot;, ispickval(BA_X2_years_in_business__c, &quot;No&quot;), Percent_Payback__c &gt; 40),&quot;Percent Payback cannot exceed 40%&quot;,&quot;&quot;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conditional Pricing Criteria</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirm_DBA_Address_against_Google_Maps__c</fullName>
        <label>Confirm DBA/Address against Google Maps:</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>No Results</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confirmed_Add_l_Signer_Mobile_Number__c</fullName>
        <label>Confirmed Add&apos;l Signer Mobile Number</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Results</fullName>
                </value>
                <value>
                    <fullName>Confirmed Under Merchant Name</fullName>
                </value>
                <value>
                    <fullName>Confirmed w/o Merchant name</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confirmed_Add_l_Signer_Phone_Number__c</fullName>
        <label>Confirmed Add&apos;l Signer Phone Number</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Results</fullName>
                </value>
                <value>
                    <fullName>Confirmed Under Merchant Name</fullName>
                </value>
                <value>
                    <fullName>Confirmed w/o Merchant name</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confirmed_Contact_Mobile_Number__c</fullName>
        <label>Confirmed Contact Mobile Number</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Results</fullName>
                </value>
                <value>
                    <fullName>Confirmed Under Merchant Name</fullName>
                </value>
                <value>
                    <fullName>Confirmed w/o Merchant name</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confirmed_Contact_Phone_Number__c</fullName>
        <label>Confirmed Contact Phone Number</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Results</fullName>
                </value>
                <value>
                    <fullName>Confirmed Under Merchant Name</fullName>
                </value>
                <value>
                    <fullName>Confirmed w/o Merchant name</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confirmed_FRSA_Dates__c</fullName>
        <label>Confirmed FRSA Dates?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confirmed_QC_Calc_Against_Deal_Terms__c</fullName>
        <label>Confirmed QC Calc/ Against Deal Terms?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confirmed_Westlaw_real_property_search__c</fullName>
        <label>Confirmed Westlaw real property search</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Confirmed w/No Match</fullName>
                </value>
                <value>
                    <fullName>NO Result</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confirmed_additional_business_1_address__c</fullName>
        <label>Confirmed all additional bus. addresses?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confirmed_bank_information__c</fullName>
        <label>Confirmed bank information with:</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirmed_business_DBA_name__c</fullName>
        <label>Confirmed business DBA name?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confirmed_competitor_Payoff_Information__c</fullName>
        <label>Confirmed competitor Payoff Information</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confirmed_legal_name_in_Westlaw__c</fullName>
        <label>Confirmed legal name in Westlaw?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>State Web-Site</fullName>
                </value>
                <value>
                    <fullName>Unable To Confirm</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confirmed_wire_amount_with__c</fullName>
        <label>Confirmed wire amount with:</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactID__c</fullName>
        <formula>Contact__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ContactID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_DateTime__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Credit_Bureau_Summary__c</fullName>
        <formula>&quot;Total Of Mortgage Trades 60 DPD:&quot;&amp; text( CRR__r.TotalOfMortgageTrades60DaysPastDue__c) &amp; BR()
&amp; &quot;Total Of Mortgage Trades 90 DPD:&quot;&amp; text( CRR__r.TotalOfMortgageTrades90DaysPastDue__c) &amp; BR()
&amp; &quot;Number Of Bankruptcies:&quot;&amp; text( CRR__r.NumberOfBankruptcies__c) &amp; BR()
&amp; &quot;Total Past Due Amount:&quot;&amp; text( CRR__r.TotalPastDueAmount__c) &amp; BR()
&amp; &quot;Oldest Open Date Of A Trade:&quot;&amp; text( CRR__r.OldestOpenDateOfATrade__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Bureau Summary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Related_Reporting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit Related Reporting</label>
        <referenceTo>Credit_Related_Reporting__c</referenceTo>
        <relationshipLabel>Opportunities (Credit Related Reporting)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Processor__c</fullName>
        <inlineHelpText>If updated, update also new processor field</inlineHelpText>
        <label>Current Processor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1st federal financial</fullName>
                </value>
                <value>
                    <fullName>1st First Source Bank</fullName>
                </value>
                <value>
                    <fullName>Abanco INTERNATIONAL</fullName>
                </value>
                <value>
                    <fullName>ABC Global Systems</fullName>
                </value>
                <value>
                    <fullName>Advanced Merchant Services</fullName>
                </value>
                <value>
                    <fullName>Alliant Financial Services</fullName>
                </value>
                <value>
                    <fullName>Allied Merchant Services</fullName>
                </value>
                <value>
                    <fullName>Alpha Card</fullName>
                </value>
                <value>
                    <fullName>Alpine Payment Systems</fullName>
                </value>
                <value>
                    <fullName>Ameribank National</fullName>
                </value>
                <value>
                    <fullName>American Credit Card Processing, Corp</fullName>
                </value>
                <value>
                    <fullName>American Payment Solutions</fullName>
                </value>
                <value>
                    <fullName>AMERICAN SAVINGS BANK</fullName>
                </value>
                <value>
                    <fullName>AmeriMerchant Payment Systems</fullName>
                </value>
                <value>
                    <fullName>AMI-Merchant Solutions</fullName>
                </value>
                <value>
                    <fullName>Approval Payment Solutions</fullName>
                </value>
                <value>
                    <fullName>Appstar Financial</fullName>
                </value>
                <value>
                    <fullName>Atlantic Stewardship Bank</fullName>
                </value>
                <value>
                    <fullName>Authorize Net</fullName>
                </value>
                <value>
                    <fullName>AVFUEL</fullName>
                </value>
                <value>
                    <fullName>Axia Corp.</fullName>
                </value>
                <value>
                    <fullName>Bancard Payment Systems</fullName>
                </value>
                <value>
                    <fullName>Bancfirst</fullName>
                </value>
                <value>
                    <fullName>BanCorpSouth</fullName>
                </value>
                <value>
                    <fullName>BankCard Central</fullName>
                </value>
                <value>
                    <fullName>Bank Card Depot</fullName>
                </value>
                <value>
                    <fullName>Bank Card Services</fullName>
                </value>
                <value>
                    <fullName>Bankcard USA</fullName>
                </value>
                <value>
                    <fullName>Banker&apos;s Merchant Services</fullName>
                </value>
                <value>
                    <fullName>Bank of America Merchant Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_ROI_PO__c</fullName>
        <formula>If_Renewal_Preceding_Opportunity__r.Current_ROI__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current % ROI (PO)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Current_ROI__c</fullName>
        <label>Current % ROI</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DBA_Name__c</fullName>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DBA Name:</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DDA_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DDA Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DDA_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DDA Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMSDocsFirstRoundComplete__c</fullName>
        <label>DMS Docs First Round Complete</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DOA_Incomplete_Notes__c</fullName>
        <label>DOA / Incomplete Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DOA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Dead on Arrival</description>
        <label>DOA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DS_Person__c</fullName>
        <label>DS Person</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Executive</fullName>
                </value>
                <value>
                    <fullName>Armando Rojas</fullName>
                </value>
                <value>
                    <fullName>Angela Walter</fullName>
                </value>
                <value>
                    <fullName>Chevera Hazel</fullName>
                </value>
                <value>
                    <fullName>Terrence White</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DS_Retrieved_All_Conditions__c</fullName>
        <label>DS Retrieved All Conditions</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DS_Start_Date_Time__c</fullName>
        <label>DS Start Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Daily_Doubler__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Daily Doubler</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Entry_Date__c</fullName>
        <label>Data Entry Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Split_Changed__c</fullName>
        <label>Date Split Changed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Days_Since_Decision_Date__c</fullName>
        <formula>NOW() -  Decision_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Decision Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dead_BOBA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dead BOBA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DealOwner_Group__c</fullName>
        <label>DealOwner Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Terms_Interview_s_Required__c</fullName>
        <label>Deal Terms–Interview(s) Required?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes-LL and Merchant</fullName>
                </value>
                <value>
                    <fullName>Yes-Landlord Only</fullName>
                </value>
                <value>
                    <fullName>Yes-Merchant Only</fullName>
                </value>
                <value>
                    <fullName>No-LL or Merchant</fullName>
                </value>
                <value>
                    <fullName>No-Landlord</fullName>
                </value>
                <value>
                    <fullName>No-Merchant</fullName>
                </value>
                <value>
                    <fullName>Bank Confirmation</fullName>
                </value>
                <value>
                    <fullName>Vender Confirmation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Debit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Debit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Decision_Date__c</fullName>
        <label>Decision Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Decision_Flag__c</fullName>
        <formula>if(isnull( Decision_Date__c ),0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Decision Rendered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Decline_Letter_Sent_Days_Count__c</fullName>
        <formula>(TODAY()-Decline_Letter_Sent_Due_Date__c)-(NOW()- Decline_Letter_Sent__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Decline Letter Sent - Days Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Decline_Letter_Sent_Due_Date__c</fullName>
        <label>Decline Letter Sent Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Decline_Letter_Sent_Flag__c</fullName>
        <formula>IMAGE( 
IF(AND(ISNULL(  Decline_Letter_Sent__c ),  Decline_Letter_Sent_Due_Date__c &lt; TODAY()), &quot;/img/samples/flag_red.gif&quot;, 
&quot;/s.gif&quot;), 
&quot;Priority Flag&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Decline Letter Sent Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Decline_Letter_Sent__c</fullName>
        <label>Decline Letter Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Decline_Reason__c</fullName>
        <label>Decline Reason</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BAM - Match</fullName>
                </value>
                <value>
                    <fullName>BS - &lt;3 source of deposits</fullName>
                </value>
                <value>
                    <fullName>BS - Avg. &lt;5x DRA</fullName>
                </value>
                <value>
                    <fullName>BS - Avg. Daily Balance &lt;$5000</fullName>
                </value>
                <value>
                    <fullName>BS - Competitor NSFs</fullName>
                </value>
                <value>
                    <fullName>BS - Competitor Stacking H/R</fullName>
                </value>
                <value>
                    <fullName>BS - MCA &gt;3 unpaid competitor NSFs</fullName>
                </value>
                <value>
                    <fullName>BS - MCA Negative MEB</fullName>
                </value>
                <value>
                    <fullName>BS - MoM decline in gross sales</fullName>
                </value>
                <value>
                    <fullName>BS - Non factoring company &lt;5 deposits</fullName>
                </value>
                <value>
                    <fullName>BS - YoY decline in gross sales</fullName>
                </value>
                <value>
                    <fullName>Bus - Behind in Payments</fullName>
                </value>
                <value>
                    <fullName>Bus - Business for Sale</fullName>
                </value>
                <value>
                    <fullName>Bus - Closed for Renovations</fullName>
                </value>
                <value>
                    <fullName>Bus - Competitor judgment filed</fullName>
                </value>
                <value>
                    <fullName>Bus - Discrepencies with ownership</fullName>
                </value>
                <value>
                    <fullName>Bus - Documentation Discrepencies</fullName>
                </value>
                <value>
                    <fullName>Bus - Inconsistent Fluctuation/Seasonal</fullName>
                </value>
                <value>
                    <fullName>Bus - Open Tax Liens w/o payment plan</fullName>
                </value>
                <value>
                    <fullName>Bus - Past Due SBA Loan</fullName>
                </value>
                <value>
                    <fullName>Bus - Past due with the DOT</fullName>
                </value>
                <value>
                    <fullName>Bus - Prohibited List</fullName>
                </value>
                <value>
                    <fullName>Bus - Signs of Financial Distress</fullName>
                </value>
                <value>
                    <fullName>Bus - State Law Requirements</fullName>
                </value>
                <value>
                    <fullName>Bus - Tax Liens balance &gt;$150k</fullName>
                </value>
                <value>
                    <fullName>CC - &lt;12 batches</fullName>
                </value>
                <value>
                    <fullName>CC - Cannot pledge future receivables</fullName>
                </value>
                <value>
                    <fullName>CC - High Risk Tender Shift</fullName>
                </value>
                <value>
                    <fullName>CC - MoM decline in volume</fullName>
                </value>
                <value>
                    <fullName>CC - YoY decline in Volume</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Declined_Flag__c</fullName>
        <formula>if(or( ISPICKVAL( Underwriting_Approval__c,&quot;Auto Declined&quot;),ISPICKVAL( Underwriting_Approval__c,&quot;Declined&quot;),ISPICKVAL( Underwriting_Approval__c,&quot;Declined by Credit Committee&quot;),ISPICKVAL( Underwriting_Approval__c,&quot;Declined - Pending Management Review&quot;), ISPICKVAL( QC_Decision__c ,&quot;Auto Declined&quot;)),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Declined</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Direct_Mail_Attribution__c</fullName>
        <label>Direct Mail Attribution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discover__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discover</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_you_foresee_the_merchant_closing__c</fullName>
        <label>Do you foresee the merchant closing?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Docs_in_DMS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Documents are uploaded into DMS</description>
        <label>Docs in DMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Does_Merchant_Own_The_Business_Location__c</fullName>
        <label>Does Merchant Own The Business Location?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Does_the_Merchant__c</fullName>
        <label>Does the Merchant Own Their Home</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EC_Company_in_business_6_months__c</fullName>
        <label>Company in business &lt; 1 year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Yes Starter</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EC_Criteria_Decision__c</fullName>
        <formula>if(ispickval( Product__c, &quot;MCA&quot;),If ( ISPICKVAL( EC_X4_consecutive_months_of_processing__c , &quot;Yes&quot;) , &quot;INELIGIBLE - STOP RIGHT NOW&quot;,If ( ISPICKVAL( EC_X12_separate_daily_deposits_per_month__c , &quot;Yes&quot;) , &quot;INELIGIBLE - STOP RIGHT NOW&quot;, If ( ISPICKVAL(  EC_Company_in_business_6_months__c  , &quot;Yes&quot;) , &quot;INELIGIBLE - STOP RIGHT NOW&quot;,
&quot;Eligible Criteria Met&quot; ))),if(ispickval( Product__c, &quot;Loan&quot;),If ( ISPICKVAL(  EC_Company_in_business_6_months__c  , &quot;Yes&quot;) , &quot;INELIGIBLE - STOP RIGHT NOW&quot;,&quot;Eligible Criteria Met&quot; ),&quot;Eligible Criteria Met&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Criteria Decision</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EC_X12_separate_daily_deposits_per_month__c</fullName>
        <label>&lt; 12 separate daily deposits per month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA Loan</fullName>
                </value>
                <value>
                    <fullName>NA Renewal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EC_X4_consecutive_months_of_processing__c</fullName>
        <label>&lt; 4 consecutive months of processing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA Loan</fullName>
                </value>
                <value>
                    <fullName>NA Renewal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Eligible_Photo_ID__c</fullName>
        <label>Eligible Photo ID</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Eligible_for_Decline_Program__c</fullName>
        <label>Eligible for Decline Program</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Validation_Code__c</fullName>
        <description>This code is what&apos;s returned when we validate the email address.</description>
        <label>Email Validation Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Escalation_Date__c</fullName>
        <label>Escalation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Escalation_Play__c</fullName>
        <label>Escalation Play</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Est_Days_to_Repay__c</fullName>
        <label>Est. Days to Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Daily_Repay__c</fullName>
        <formula>IF( 

or(CONTAINS(TEXT(Product__c),&quot;Loan&quot;),CONTAINS(TEXT(Product__c),&quot;Line&quot;))

,

  if(isblank( Loan_Term_Days__c ),0,Pay_Back_Amount__c  / Loan_Term_Days__c ), if(isblank(Estimated_Days_to_Repay__c),0,Pay_Back_Amount__c  /  Estimated_Days_to_Repay__c))</formula>
        <label>Estimated Daily Transactions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Daily_Transactions__c</fullName>
        <formula>IF( or(CONTAINS(TEXT(Product__c),&quot;Loan&quot;),CONTAINS(TEXT(Product__c),&quot;Line&quot;)),if(isblank( Loan_Term_Days__c ),0,Pay_Back_Amount__c / Loan_Term_Days__c ), if(isblank(Estimated_Days_to_Repay__c),0,Pay_Back_Amount__c / Estimated_Days_to_Repay__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Daily Transactions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Days_to_Repay__c</fullName>
        <label>Estimated Days to Complete</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>